[ios] Fixes an AssertBaseSyncPrimitivesAllowed() crash at shutdown.

Adds calls to SetWaitAllowed() when shutdown is initiated, similar
to the existing code in BrowserMainLoop.

BUG=917583,800808

Change-Id: I53ad0df9c28a0e14348f6c9ad5be97446732505b
Reviewed-on: https://chromium-review.googlesource.com/c/1390912
Reviewed-by: Gabriel Charette <gab@chromium.org>
Commit-Queue: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619077}
Former-commit-id: be8e5da750961cdc67572a9c53ead47c5aa943d7